--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>com</groupId>
-  <artifactId>Nirvana</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>com</groupId>
+	<artifactId>Nirvana</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>Nirvana</name>
-  <url>http://maven.apache.org</url>
+	<name>Nirvana</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
-		<version.testng>6.13.1</version.testng>
+	<properties>
+		<version.testng>6.14.3</version.testng>
 		<version.selenium>3.141.59</version.selenium>
 		<version.maven.failsafe>2.17</version.maven.failsafe>
 		<version.commons.lang>2.6</version.commons.lang>
@@ -26,14 +27,14 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.7.0</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 		<dependency>
-		    <groupId>io.github.bonigarcia</groupId>
-		    <artifactId>webdrivermanager</artifactId>
-		    <version>3.8.1</version>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>3.8.1</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
@@ -56,16 +57,19 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.15-beta2</version>
 		</dependency>
-	<!-- <dependency>
-    	<groupId>com.relevantcodes</groupId>
-    	<artifactId>extentreports</artifactId>
-   		 <version>2.41.2</version>
-	</dependency> -->
-<dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>3.1.1</version>
-</dependency>
+		<!-- <dependency> <groupId>com.relevantcodes</groupId> <artifactId>extentreports</artifactId> 
+			<version>2.41.2</version> </dependency> -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.17.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
 			<artifactId>velocity</artifactId>
@@ -122,18 +126,18 @@
 			<artifactId>bcprov-jdk14</artifactId>
 			<version>138</version>
 		</dependency>
-		 <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-exec</artifactId>
-            <version>1.3</version>
-        </dependency>
-        
-	    <dependency>
-	        <groupId>com.microsoft.edge</groupId>
-	        <artifactId>msedge-selenium-tools-java</artifactId>
-	        <version>3.141.0</version>
-	    </dependency>
-       
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-exec</artifactId>
+			<version>1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.microsoft.edge</groupId>
+			<artifactId>msedge-selenium-tools-java</artifactId>
+			<version>3.141.0</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<!-- <sourceDirectory>src</sourceDirectory> -->
@@ -146,7 +150,7 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
@@ -172,8 +176,15 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.21.0</version>
 				<configuration>
-					<suiteXmlFiles><suiteXmlFile>Build/${suiteXmlFiles}</suiteXmlFile>
-					</suiteXmlFiles>	
+					<systemPropertyVariables>
+						<executionURL>${url}</executionURL>
+					</systemPropertyVariables>
+					<systemPropertyVariables>
+						<executionBrowser>${browser}</executionBrowser>
+					</systemPropertyVariables>
+					<suiteXmlFiles>
+						<suiteXmlFile>Build/${suiteXmlFiles}</suiteXmlFile>
+					</suiteXmlFiles>
 					<reportsDirectory>test-output</reportsDirectory>
 					<properties>
 						<property>
